feat: refactor parameter of oauth register and add new API doc for swagger
